tests/e2e/pass/v2_assert_ok.ep
# EXIT: 5
fun main(): i64 {
    assert true, "bad"
    ret 5
}
